# Music-streaming-server

./: Makefile  README.md  auth.cpp  client.cpp  header.hpp  login_phase.cpp  server.cpp  server.hpp  tui_client.cpp  users.db  users.txt  utils.cpp
GUI/: CMakeLists.txt  Client.cpp  Client.hpp  LoginWindow.cpp  LoginWindow.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp
